--- a/src/app/shared/control/control.component.html
+++ b/src/app/shared/control/control.component.html
@@ -1,6 +1,2 @@
-  <p>
-    <label for="title">{{ label}}</label
-    >
-    <ng-content select="[input, textarea]"></ng-content>
-    <!-- <input id="title" name="title" type="text" /> -->
-  </p>
+<label for="title">{{ label }}</label>
+<ng-content select="[input, textarea]"></ng-content>
