--- a/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
+++ b/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
@@ -1,9 +1,15 @@
-<form (ngSubmit)="onSubmit(titleInput, requestInput)" #form>
+<form (ngSubmit)="onSubmit()" #form>
   <app-control label="Title">
-    ><input id="title" name="title" type="text" #titleInput #input/>
+    ><input id="title" name="title" type="text" [(ngModel)]="title" #input />
   </app-control>
   <app-control label="Request">
-    ><textarea id="request" name="request" rows="3" #requestInput #input></textarea>
+    ><textarea
+      id="request"
+      name="request"
+      rows="3"
+      [(ngModel)]="request"
+      #input
+    ></textarea>
   </app-control>
   <p>
     <button type="submit" appButton>
